# vulgr

./: LICENSE  vulgr.cabal
src/: Lib.hs
vulgr-cli/src/: Main.hs
vulgr-lib/src/: Lib.hs
vulgr-lib/src/Vulgr/: API.hs  Cve.hs  Neo4j.hs
vulgr-lib/src/Vulgr/CPE/: Types.hs  test
vulgr-lib/src/Vulgr/XML/: Types.hs
vulgr-service/src/: Conf.hs  Main.hs
