name:                vulgr
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/wayofthepie/vulgr#readme
license:             BSD3
license-file:        LICENSE
author:              Stephen OBrien
maintainer:          wayofthepie
copyright:           Stephen OBrien
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      vulgr-lib/src
  ghc-options:         -fwarn-unused-imports
  exposed-modules:
    Lib
    , Vulgr.XML.Types

  build-depends:
    base >= 4.7 && < 5
    , aeson
    , bytestring
    , conduit
    , containers
    , either
    , haskell-neo4j-client
    , lens
    , lens-aeson
    , mtl
    , resourcet
    , servant
    , servant-server
    , transformers
    , text
    , time
    , timerep
    , unordered-containers
    , wai
    , warp
    , xml-conduit
  default-language:    Haskell2010

executable vulgr-service
  hs-source-dirs:      vulgr-service/src
  main-is:             Main.hs
  other-modules:
    Conf
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base
    , either
    , filepath
    , mtl
    , haskell-neo4j-client
    , servant-server
    , text
    , vulgr
    , wai
    , warp
    , yaml
  default-language:    Haskell2010

executable vulgr-cli
  hs-source-dirs:      vulgr-cli/src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    base
    , either
    , servant
    , servant-client
    , xml-conduit
    , vulgr
  default-language:    Haskell2010


test-suite vulgr-lib-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      vulgr-lib/test
  main-is:             Spec.hs
  build-depends:       base
                     , vulgr
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wayofthepie/vulgr
